提交人：Huis 提交说明：增加设计图和基本的页面

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,7 +5,6 @@
  ************************************/
 
 @import "_variables";
-@import "_fonts";
 
 /**
  * LAYOUT
@@ -24,4 +23,9 @@
  * VIEWS
  */
 
-@import "views/home";
+@import "views/recordDateTime";
+
+/**
+ * Common
+ */
+@import "common/common"
