--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,28 +1,26 @@
 <ion-side-menus>
     <!-- Center content -->
     <ion-side-menu-content>
-
+        <ion-nav-bar class="bar-positive">
+            <ion-nav-back-button class="button-clear">
+                <i class="ion-arrow-left-c"></i> Back
+            </ion-nav-back-button>
+        </ion-nav-bar>
         <ion-nav-view name="viewContent">
-
         </ion-nav-view>
     </ion-side-menu-content>
-
     <!-- Left menu -->
-    <ion-side-menu side="left" class="side-menu">
-
+    <ion-side-menu width="230" side="left" class="side-menu">
         <ion-header-bar align-title="center" class="bar-positive">
-            <h1 class="title">Side Menu</h1>
+            <h1 class="title">Side Menu List</h1>
         </ion-header-bar>
-
         <ion-content class="has-header">
             <div class="list">
-                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.home">
-                    <i class="icon ion-home"></i>
-                    Home
+                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.recordDateTime">
+                    <i class="icon ion-home"></i> Record Date Time
                 </a>
-                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.settings">
-                    <i class="icon ion-settings"></i>
-                    Settings
+                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.carList">
+                    <i class="icon ion-settings"></i> Car List
                 </a>
             </div>
         </ion-content>
